koha-tmpl/intranet-tmpl/prog/en/css/preferences.css
.preference-url, .preference-multi, .preference-long, .preference-file {
    width: 20em;
}

.preference-short, .preference-email {
    width: 10em;
}

.preference-integer, .preference-percent, .preference-date, .preference-currency {
    width: 5em;
}

textarea.preference {
    width: 35em;
	height: 20em;
	display: block;
}

textarea.preference-code, .preference-file {
	font-family: monospace;
}

a.expand-textarea {
    display: block;
}
dl {
	margin-left : 1em;
}
dt {
	padding : .1em;
}
h1 {
	font-size : 149%;
}
h2 {
	font-size : 134%;
}

table {
	width : 100%;
}

caption {
	color : #003399;
}

h3 {
	color : #003366;
	margin : .4em 0;
	width : 25%;
}

h3.expanded {
	background : transparent url("../../img/collapse.gif") 0 6px no-repeat;
	cursor : pointer;
	padding-left : 12px;
}

h3.collapsed {
	background : transparent url("../../img/expand.gif") 0 6px no-repeat;	
	cursor : pointer;
	padding-left : 12px;
}

