Fix images for collapsed groups (temporary hack)

--- a/koha-tmpl/intranet-tmpl/prog/en/css/preferences.css
+++ b/koha-tmpl/intranet-tmpl/prog/en/css/preferences.css
@@ -51,13 +51,11 @@ h3 {
 }
 
 h3.expanded {
-	background : transparent url("../../img/collapse.gif") 0 6px no-repeat;
 	cursor : pointer;
-	padding-left : 12px;
 }
 
 h3.collapsed {
-	background : transparent url("../../img/expand.gif") 0 6px no-repeat;	
+	background : transparent url("../../img/more.gif") 0 6px no-repeat;	
 	cursor : pointer;
 	padding-left : 12px;
 }
